# netidx-lite

./: Cargo.toml  rustfmt.toml
netidx/: Cargo.toml
netidx/src/: batch_channel.rs  lib.rs  main.rs  path.rs  protocol.rs  publisher.rs  socket_channel.rs  utils.rs
pack/: Cargo.toml
pack/derive/: Cargo.toml  README.md
pack/derive/src/: lib.rs
pack/src/: lib.rs
pool/: Cargo.toml
pool/src/: lib.rs  utils.rs
src/: chars.rs  lib.rs  pack.rs  pool.rs  publisher.rs  socket_channel.rs  utils.rs
