[package]
name = "netidx-lite"
version = "0.1.0"
edition = "2021"

# CR alee: make the following optional (only useful in Pack)
# arcstr
# chrono
# enumflags2
# rust_decimal
# uuid

[dependencies]
anyhow = "1"
arcstr = "1"
bytes = "1"
chrono = "0.4"
clap = "4"
crossbeam = "0.8"
enumflags2 = "0.7"
env_logger = "0.11"
fxhash = "0.2"
indexmap = "2"
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
rust_decimal = "1"
serde = "1"
tokio = { version = "1", features = ["full"] }
triomphe = "0.1"
uuid = "1"
