[workspace]
resolver = "2"
members = [
    "netidx",
    "pack",
    "pack/derive",
    "pool"
]

[workspace.dependencies]
anyhow = "1"
arcstr = { version = "1", features = ["serde"] }
base64 = "0.22"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = "4"
combine = "4"
crossbeam = "0.8"
enumflags2 = "0.7"
env_logger = "0.11"
futures = "0.3"
fxhash = "0.2"
indexmap = "2"
lazy_static = "1"
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
rust_decimal = "1"
serde = { version = "1", features = ["derive", "rc"] }
smallvec = "1"
tokio = { version = "1", features = ["full"] }
triomphe = "0.1"
uuid = "1"
